Template cleanup before development begins

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-  <title>Your Title</title>
+  <title>Taggert UI test</title>
   <meta name="keywords" content="Your, content, tags, here">
   <meta name="description" content="Your content described here.">
 </head>
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="wrapper">
       <div class="site-header__logo">
-        <img src=""> <!-- logo img goes here -->
+        <h1>LOGO</h1>>
       </div>  
       
       <div class="site-header__menu-icon">
@@ -45,17 +45,7 @@
       </picture>
     -->
     
-    <!-- Centered content on top of large hero image -->
-    <div class="large-hero__text-content">
-      <div class="wrapper">
-        <h1 class="large-hero__title">Hero Title</h1>
-        <h2 class="large-hero__subtitle">Hero subtitle</h2>
-        <p class="large-hero__description">Hero description, can be a few more words...</p>
-        <p><a href="#" class="btn btn--orange btn--large">CTA</a></p>
-      </div>      
-    </div>      
-  </div>
-
+ 
   <!-- A page section -->
   <div id="" class="page-section">
     <div class="wrapper">      
