Started single-item-view branch

--- a/app/index.html
+++ b/app/index.html
@@ -45,20 +45,14 @@
       </picture>
     -->
     
-    <!-- Centered content on top of large hero image -->
-    <div class="large-hero__text-content">
-      <div class="wrapper">
-        <h1 class="large-hero__title">Hero Title</h1>
-        <h2 class="large-hero__subtitle">Hero subtitle</h2>
-        <p class="large-hero__description">Hero description, can be a few more words...</p>
-        <p><a href="#" class="btn btn--orange btn--large">CTA</a></p>
-      </div>      
-    </div>      
-  </div>
 
   <!-- A page section -->
   <div id="" class="page-section">
-    <div class="wrapper">      
+    <div class="wrapper">     
+      <div class="view-single-item">
+        <h1>Single Item View</h1>
+        <p>Content inside single item view</p>
+      </div> 
     </div>    
   </div>
 
