--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="wrapper">
       <div class="site-header__logo">
-        <h1>LOGO</h1>>
+        <h3>LOGO</h3>
       </div>  
       
       <div class="site-header__menu-icon">
@@ -45,11 +45,6 @@
       </picture>
     -->
     
-<<<<<<< HEAD
- 
-=======
-
->>>>>>> single-item-view
   <!-- A page section -->
   <div id="" class="page-section">
     <div class="wrapper">     
