Still fiddling with single-item-view

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
     <div class="wrapper">     
       <div class="view-single-item">
         <h1>Single Item View</h1>
-        <p>Content inside single item view</p>
+        <p>Content inside single item viewss</p>
       </div> 
     </div>    
   </div>
