--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
     <div class="wrapper">     
       <div class="view-single-item">
         <h1>Single Item View</h1>
-        <p>Content inside single item viewss</p>
+        <p>Content inside single item viewssss</p>
       </div> 
     </div>    
   </div>
