Created basic styles for tag submit box

--- a/app/index.html
+++ b/app/index.html
@@ -59,12 +59,16 @@
         </div> 
 
         <div class="view-single-item__item" id="item-tags">
-          <label for="tag-input">Add new tags, comma-separated:</label>
-          <div class="submit-box">
-            <input type="text" class="tag-input" id="tag-input" name="tag-input" minlength="1" >
-            <button type="button" class="btn">Add tags</button>
-          </div>
-          
+          <div class="form">
+            <label for="form__tag-input">Add new tags, comma-separated:</label>
+            <div class="form__submit-box">
+              <input type="text" class="form__tag-input" id="tag-input" name="tag-input" minlength="1" >
+              <button type="button" class="btn btn--submit-box">Add tags</button>
+            </div>
+            <div class="form__tag-list">
+              <span class="form__tag-item">Tag 1</span>
+            </div>
+          </div>        
         </div> 
       </div>      
     </div>    
