Finished rough layout for single item view

--- a/app/index.html
+++ b/app/index.html
@@ -50,10 +50,10 @@
     <div class="wrapper">     
       <div class="view-single-item" id="item-image">
         <div class="view-single-item__item">
-          <img src="./assets/images/small/rome_600.jpg" alt="">
+          <img src="./assets/images/small/rome_600.jpg" class="view-single-item__item__image" alt="">
         </div>
 
-        <div class="view-single-item__item" id="item-descr">
+        <div class="view-single-item__item view-single-item__item__descr" id="item-descr">
           <h1>Item description</h1>
           <p>This is the item description - Stare out the window chase red laser dot cat meoooow i iz master of hoomaan, not hoomaan master of i, oooh damn dat dog. Meowing chowing and wowing love fish drink from the toilet and instantly break out into full speed gallop across the house for no reason sit on human so chase mice sniff all the things. </p>
         </div> 
@@ -65,8 +65,32 @@
               <input type="text" class="form__tag-input" id="tag-input" name="tag-input" minlength="1" >
               <button type="button" class="btn btn--submit-box">Add tags</button>
             </div>
-            <div class="form__tag-list">
-              <span class="form__tag-item">Tag 1</span>
+            <div class="tag-list">
+              <span class="tag-list__item"> 
+                <span class="tag-list__item__text">Tag 1</span>
+                <span class="tag-list__item__close">x</span>
+              </span>
+              <span class="tag-list__item"> 
+                <span class="tag-list__item__text">Longer tag</span>
+                <span class="tag-list__item__close">x</span>
+              </span>
+              <span class="tag-list__item"> 
+                <span class="tag-list__item__text">A longer tag even yet</span>
+                <span class="tag-list__item__close">x</span>
+              </span>
+              <span class="tag-list__item"> 
+                <span class="tag-list__item__text">Tag 1</span>
+                <span class="tag-list__item__close">x</span>
+              </span>
+              <span class="tag-list__item"> 
+                <span class="tag-list__item__text">Longer tag</span>
+                <span class="tag-list__item__close">x</span>
+              </span>
+              <span class="tag-list__item"> 
+                <span class="tag-list__item__text">A longer tag</span>
+                <span class="tag-list__item__close">x</span>
+              </span>
+              
             </div>
           </div>        
         </div> 
