Small changes to single item view

--- a/app/index.html
+++ b/app/index.html
@@ -57,14 +57,15 @@
           <h1>Item description</h1>
           <p>This is the item description - Stare out the window chase red laser dot cat meoooow i iz master of hoomaan, not hoomaan master of i, oooh damn dat dog. Meowing chowing and wowing love fish drink from the toilet and instantly break out into full speed gallop across the house for no reason sit on human so chase mice sniff all the things. </p>
         </div> 
-
+        
         <div class="view-single-item__item" id="item-tags">
+          <h1>Tags</h1>
           <div class="form">
             <label for="form__tag-input">Add new tags, comma-separated:</label>
             <div class="form__submit-box">
               <input type="text" class="form__tag-input" id="tag-input" name="tag-input" minlength="1" >
               <button type="button" class="btn btn--submit-box">Add tags</button>
-            </div>
+            </div>            
             <div class="tag-list">
               <span class="tag-list__item"> 
                 <span class="tag-list__item__text">Tag 1</span>
