Started TagAdder.js module

--- a/app/index.html
+++ b/app/index.html
@@ -63,8 +63,8 @@
           <div class="form">
             <label for="form__tag-input">Add new tags, comma-separated:</label>
             <div class="form__submit-box">
-              <input type="text" class="form__tag-input" id="tag-input" name="tag-input" minlength="1" >
-              <button type="button" class="btn btn--submit-box">Add tags</button>
+              <input type="text" class="form__tag-input" id="tag-input" name="tag-input" minlength="1" maxlength="100" >
+              <button type="button" class="btn btn--submit-box" id="add-tag">Add tags</button>
             </div>            
             <div class="tag-list">
               <span class="tag-list__item"> 
