Fixed <empty string> problem

--- a/app/index.html
+++ b/app/index.html
@@ -62,8 +62,8 @@
           <h1>Tags</h1>
           <div class="form">
             <label for="form__tag-input">Add new tags, comma-separated:</label>
-            <form action="" class="form__submit-box" id="submitbox">
-              <input type="text" class="form__tag-input" id="tag-input" name="taginput" minlength="1" maxlength="100" >
+            <form action="" class="form__submit-box" id="submit-box">
+              <input type="text" class="form__tag-input" id="tag-input" name="tag-input" minlength="1" maxlength="100" >
               <button class="btn btn--submit-box" id="add-tag">Add tags</button>
             </form>            
             <div class="tag-list" id="tag-list">
